[package]
name = "linear-mg"
version = "0.2.0"
edition = "2024"
rust-version = "1.95"
description = "A CLI tool for the Linear GraphQL API, designed for AI agent consumption"
license = "MIT"
repository = "https://github.com/duckedup/linear-mg"
keywords = ["linear", "graphql", "cli", "project-management", "api"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.gz"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.zip"
pkg-fmt = "zip"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
